# EnvA

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-pages.yml
config/: enva.example.yaml  enva.project.example.yaml
crates/enva/: Cargo.toml
crates/enva-core/: Cargo.toml
crates/enva-core/benches/: crypto_bench.rs
crates/enva-core/src/: audit.rs  crypto.rs  file_backend.rs  lib.rs  profile.rs  resolver.rs  store.rs  types.rs  vault_crypto.rs
crates/enva/src/: config.rs  main.rs  paths.rs  ssh_config.rs  ssh_hosts.rs  sync.rs  transfer.rs  update.rs  vault.rs
crates/enva/src/web/: auth.rs  mod.rs  routes.rs
crates/enva/tests/: cli_integration.rs  reimplementation_oracle.rs  static_pages.rs
crates/enva/tests/common/: mod.rs
crates/enva/web/: index.html
docs/: README.md  agent-index.md
docs/assets/branding/: BRANDING.md
docs/design/demo/: index.html
docs/design/en/: api_spec.md  architecture.md  common_alignment.md  config_reference.md  deployment.md  migration_adoption.md  tech_decision.md  userguide.md  vault_spec.md
docs/design/zh/: api_spec.md  architecture.md  config_reference.md  deployment.md  tech_decision.md  userguide.md  vault_spec.md
scripts/: install.sh  post_install_smoke.sh  test-macos.sh
site/: demo.html  index.html
site/css/: style.css
site/js/: main.js
tools/apple-sdk-shim/CommonCrypto/: CommonCryptoError.h  CommonRandom.h
