[workspace]
members = [
    "crates/enva-core",
    "crates/enva",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
