[package]
name = "enva"
version.workspace = true
edition.workspace = true

[[bin]]
name = "enva"
path = "src/main.rs"

[dependencies]
enva-core = { path = "../enva-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }

clap = { version = "4.5", features = ["derive", "color", "env"] }
rpassword = "7.4"

axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }
serde_yaml = "0.9"
dirs = "6"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
shellexpand = "3"
tempfile = "3"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tower = "0.5"
hyper = "1"
